--- a/app/src/main/res/raw/config_proj.json
+++ b/app/src/main/res/raw/config_proj.json
@@ -2,52 +2,44 @@
   "instruction": {
     "show":true,
     "url": {
-      "default":"http://en.china-siter.com/company_detail.html?introId=17",
-      "zh": "http://www.china-siter.cn/company_detail.html?introId=17",
-      "en": "http://en.china-siter.com/company_detail.html?introId=17",
-      "fr": "http://en.china-siter.com/company_detail.html?introId=17",
-      "de": "http://en.china-siter.com/company_detail.html?introId=17",
-      "es": "http://en.china-siter.com/company_detail.html?introId=17",
-      "fi": "http://en.china-siter.com/company_detail.html?introId=17",
-      "cs": "http://en.china-siter.com/company_detail.html?introId=17",
-      "it": "http://en.china-siter.com/company_detail.html?introId=17",
-      "nl": "http://en.china-siter.com/company_detail.html?introId=17",
-      "sl": "http://en.china-siter.com/company_detail.html?introId=17",
-      "da": "http://en.china-siter.com/company_detail.html?introId=17",
-      "nb": "http://en.china-siter.com/company_detail.html?introId=17",
-      "sv": "http://en.china-siter.com/company_detail.html?introId=17",
-      "ja": "http://en.china-siter.com/company_detail.html?introId=17"
+      "default":"https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "zh": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "en": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "fr": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "de": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "es": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "fi": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "cs": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "it": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "nl": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147",
+      "sl": "https://www.lifeboxsecurity.fr/index.php?controller=attachment&id_attachment=147"
     }
   },
   "offical_web": {
     "show":true,
     "url": {
-      "default":"http://www.china-siter.com/",
-      "zh": "http://www.china-siter.cn/",
-      "en": "http://www.china-siter.com/",
-      "fr": "http://www.china-siter.com/",
-      "de": "http://www.china-siter.com/",
-      "es": "http://www.china-siter.com/",
-      "fi": "http://www.china-siter.com/",
-      "cs": "http://www.china-siter.com/",
-      "it": "http://www.china-siter.com/",
-      "nl": "http://www.china-siter.com/",
-      "sl": "http://www.china-siter.com/",
-      "da": "http://www.china-siter.com/",
-      "nb": "http://www.china-siter.com/",
-      "sv": "http://www.china-siter.com/",
-      "ja": "http://www.china-siter.com/"
+      "default":"http://www.lifeboxsecurity.fr",
+      "zh": "http://www.lifeboxsecurity.fr",
+      "en": "http://www.lifeboxsecurity.fr",
+      "fr": "http://www.lifeboxsecurity.fr",
+      "de": "http://www.lifeboxsecurity.fr",
+      "es": "http://www.lifeboxsecurity.fr",
+      "fi": "http://www.lifeboxsecurity.fr",
+      "cs": "http://www.lifeboxsecurity.fr",
+      "it": "http://www.lifeboxsecurity.fr",
+      "nl": "http://www.lifeboxsecurity.fr",
+      "sl": "http://www.lifeboxsecurity.fr"
     }
   },
-  "app_upgrade_url":"http://61.164.94.198:1415/point/app/SiterAction!getAppUpdate.action",
-  "app_download_url":"Siterwell_GS188X_Series.apk",
+  "app_upgrade_url":"http://61.164.94.198:1415/point/app/SiterAction!getAppUpdateLife.action",
+  "app_download_url":"lifebox.apk",
   "mi_config":{
-    "appid":"2882303761517677475",
-    "appkey":"5411767797475"
+    "appid":"2882303761517835448",
+    "appkey":"5471783515448"
   },
-  "udp_config":"site05",
+  "udp_config":"LIFE03",
   "encode":"GBK",
-  "update_auto":"1"
+  "update_auto":"0"
 }
 
 
