--- a/app/src/main/res/raw/config_proj.json
+++ b/app/src/main/res/raw/config_proj.json
@@ -27,7 +27,7 @@
     "appid":"2882303761518032529",
     "appkey":"5391803232529"
   },
-  "udp_config":"site05EN",
+  "udp_config":"house07",
   "encode":"ISO-8859-1",
   "update_auto":"0"
 }
