--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,18 +53,19 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
-    compile 'me.hekr.sdk:core:2.0.0_beta8'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'org.jetbrains:annotations-java5:15.0'
-    compile 'com.zhy:base-adapter:2.0.0'
-    compile 'com.google.firebase:firebase-core:10.2.6'
-    compile 'com.google.firebase:firebase-messaging:10.2.6'
-    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'me.hekr.sdk:core:2.0.0_beta8'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.zhy:base-adapter:2.0.0'
+    implementation 'com.google.firebase:firebase-core:10.2.6'
+    implementation 'com.google.firebase:firebase-messaging:10.2.6'
+    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
     compile(name: 'libxmfunsdk-release', ext: 'aar')
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
 apply plugin: 'com.google.gms.google-services'
